<resources>
    <!-- General app related Strings-->
    <string name="app_name" translatable="false">CuLa</string>
    <string name="app_name_full">The Customizable Language Trainer</string>

    <!-- Drawer item names-->
    <string name="drawer_label_library">Library</string>
    <string name="drawer_label_settings">Settings</string>
    <string name="drawer_label_train">Train</string>
    <string name="drawer_label_lessons">Lessons</string>
    <string name="drawer_label_statistics">Statistics</string>
    <string name="drawer_label_about">About</string>

    <!--Toolbar titles, drawer item names are used for fragments-->
    <string name="title_update_library_entry">Update Library</string>
    <string name="title_update_lesson_entry">Update Lesson</string>
    <string name="title_training">Training</string>

    <!-- Library Strings-->
    <string name="library_word_deleted">Word removed from Library!</string>
    <string name="library_add_first_word">Add word: </string>

    <!-- General purpose strings -->
    <string name="undo">UNDO</string>
    <string name="restored">Restored</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="ok">OK</string>
    <string name="button_return">Return</string>
    <string name="cancel">Cancel</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="skip">Skip</string>
    <string name="sort">Sort</string>

    <!-- Update Library Strings-->
    <string name="update_library_hint_foreign_word">Add the foreign word</string>
    <string name="update_library_hint_native_word">Add the native word</string>
    <string name="update_library_button_save_word">Save</string>
    <string name="update_library_button_save_word_return">Save &amp; return</string>
    <string name="update_library_button_label_knowledgeLevel">How well do you know this word pair
        already?</string>
    <string name="update_library_label_native_word">Native Word:</string>
    <string name="update_library_label_foreign_word">Foreign Word:</string>
    <string name="update_library_warning_native_word_missing">Fill in the native word!</string>
    <string name="update_library_warning_foreign_word_missing">Please provide a translation</string>
    <string name="update_library_success_entry_added">Added word pair to library</string>

    <!-- Settings Strings-->
    <string name="settings_select_language_key" translatable="false">languages</string>
    <string name="settings_select_language_title">Select language</string>
    <string name="settings_select_language_default">Add a new language</string>
    <string name="settings_select_language_summary">Select your language to train</string>
    <string name="settings_add_language_key" translatable="false">addLanguage</string>
    <string name="settings_add_language_title">Add language</string>
    <string name="settings_add_language_summary">Add a new language</string>
    <string name="settings_delete_language_key" translatable="false">deleteLanguage</string>
    <string name="settings_delete_language_title">Delete Language</string>
    <string name="settings_delete_language_summary">Delete the currently selected language and
        all words for it.</string>
    <string name="settings_delete_language_title_warning">Delete Language: %1$s </string>
    <string name="settings_delete_language_message_warning">Are you sure that you want to
        delete the selected language and all words belonging to it? </string>
    <string name="settings_warning_invalid_language_length">Language must be between 2 and 20 characters</string>

    <string name="settings_default_knowledgeLevel_title">Default knowledge level for new
        words</string>
    <string name="settings_default_knowledgeLevel_key" translatable="false">defaultKnowledgeLevel</string>


    <string name="settings_punish_wrong_training_key" translatable="false">punishTrainingKey
    </string>
    <string name="settings_reward_correct_training_key" translatable="false">rewardTrainingKey
    </string>
    <string name="settings_punish_wrong_training_title">Knowledge decrease on wrong training
    </string>
    <string name="settings_reward_correct_training_title">Knowledge increase on correct training
    </string>
    <string name="settings_punish_wrong_training_explanation">With this setting you can control
        how much the Knowledge Level of a word should be decreased if you translate it incorrectly
        during training.\nCurrently decrease by %1d%% of a complete Knowledge Level.
    </string>
    <string name="settings_reward_correct_training_explanation">With this setting you can control
        how much the Knowledge Level of a word should be increased if you translate it correctly
        during training.
        .\nCurrently increase by %1d%% of a complete Knowledge Level.
    </string>
    <string name="settings_adapt_knowledge_level_summary">%1$d%% of a Knowledge Level</string>

    <!-- Knowledge Levels-->
    <string name="knowledgeLevel1">1 - Unknown</string>
    <string name="knowledgeLevel2">2 - Bad</string>
    <string name="knowledgeLevel3">3 - Average</string>
    <string name="knowledgeLevel4">4 - Good</string>
    <string name="knowledgeLevel5">5 - Perfect</string>
    <string name="knowledgeLevel1_value" translatable="false">0.5</string>
    <string name="knowledgeLevel2_value" translatable="false">1.5</string>
    <string name="knowledgeLevel3_value" translatable="false">2.5</string>
    <string name="knowledgeLevel4_value" translatable="false">3.5</string>
    <string name="knowledgeLevel5_value" translatable="false">4.5</string>


    <!-- Lesson Overview Strings -->
    <string name="lesson_deleted">Lesson deleted</string>
    <string name="lesson_add_first_lesson">Add Lesson: </string>

    <!-- Update Lesson strings-->
    <string name="update_lesson_label_name">Name of the Lesson</string>
    <string name="update_lesson_hint_name">Add the name of the lesson</string>
    <string name="update_lesson_hint_description">Add a description of the lesson</string>
    <string name="update_lesson_label_description">Lesson description</string>
    <string name="update_lesson_label_mapping">Library entries belonging to the lesson
        (autosaved)</string>
    <string name="update_lesson_toast_lesson_added">Added lesson</string>
    <string name="update_lesson_toast_lesson_updated">Updated lesson</string>
    <string name="update_lesson_toast_lesson_name_empty">Lesson name can\'t be empty</string>

    <!-- Start Training strings-->
    <string name="start_training_label_instructions">Select your training settings:</string>
    <string name="start_training_label_lesson">Lesson:</string>
    <string name="start_training_label_number_of_words">Number of Words:</string>
    <string name="start_training_label_knowledge_level">Knowledge Level:</string>
    <string name="start_training_button">Start Training</string>
    <string name="start_training_knowledgeLevel_range_less_or_equal" translatable="false">at most
    </string>
    <string name="start_training_knowledgeLevel_range_equal" translatable="false">exactly</string>
    <string name="start_training_knowledgeLevel_range_more_or_equal" translatable="false">at least
    </string>
    <string name="start_training_number_of_words_small" translatable="false">5</string>
    <string name="start_training_number_of_words_medium" translatable="false">10</string>
    <string name="start_training_number_of_words_large" translatable="false">25</string>
    <string name="start_training_number_of_words_50" translatable="false">50</string>
    <string name="start_training_lessons_any">Any</string>
    <string name="start_training_label_reverse_training">Reverse Training:</string>
    <string name="start_training_warning_no_matching_words">No Words match your settings.</string>

    <!-- Training strings-->
    <string name="activity_training_button_check">Check</string>
    <string name="activity_training_hint_translated_word">Translated word</string>
    <string name="activity_training_label_translate_word">Translate the following word:</string>
    <string name="activity_training_label_progress">Progress: %1$d from %2$d</string>
    <string name="activity_training_skip_word">Skip word?</string>
    <string name="activity_training_wrong_translation">, correct translation for
        %1$s:&#160;</string>
    <string name="activity_training_skip_translation">Correct translation for
        %1$s:&#160;</string>
    <string name="activity_training_training_finished">Training finished</string>
    <string name="finish_training">Finish Training</string>


    <!-- Statistics strings-->
    <string name="statistics_label_words_by_level">Library size by KnowledgeLevel for
        current language:</string>
    <string name="statistics_label_activity">Activity over the last 2 weeks (all languages):</string>

    <!-- App widget strings-->
    <string name="widget_description_last_learned">Last time you trained with CuLa</string>
    <string name="widget_description_worst_lesson">Currently worst lesson.</string>
    <string name="widget_last_learned_never">Time to train with Cula.</string>
    <string name="widget_last_learned_recently">You trained recently, very good. Keep it
        up!</string>
    <string name="widget_last_learned_last_3_days">You trained during the last days, keep
        on training!</string>
    <string name="widget_last_learned_last_7_days">Your last training was already some days
        ago. You should train regularly.</string>
    <string name="widget_last_learned_not">You didn\'t train for over a week, try to train
        more regularly.</string>
    <string name="widget_lesson_proposal">Maybe have a look at the <b>%1$s</b> lesson next.</string>


    <!-- welcome -->
    <string name="initial_text">Welcome to CuLa, the Customizable Language Trainer.
        <br /> As first step you should add the language you want to learn in the settings.
        <br />I hope you have a lot of fun with CuLa.</string>

    <!-- About page related -->
    <string name="about_privacy_policy_title">Privacy Policy</string>
    <string name="about_privacy_policy_brief">CuLa is a free and open source app that aims to
        support you with learning new languages. In order to improve the app some analytics on
        app performance are gathered and sent to the developer. You can find the full privacy
        policy in the App Store or under the following link:
    </string>
    <string name="about_code_title">Open Source</string>

    <string name="about_privacy_policy_url">https://sliebald.com/privacy-policy/cula</string>
    <string name="about_cula_code_label">You can find the source code of the app on github:</string>
    <string name="about_cula_code_url">https://github.com/SLiebald/CuLa</string>


    <!-- Sorting Keys -->
    <string name="sort_sort_by_label">Sort by:</string>
    <string name="sort_knowledgelevel">Knowledge Level</string>
    <string name="sort_created">Creation Date</string>
    <string name="sort_foreign_word">Foreign Word</string>
    <string name="sort_native_word">Native Word</string>
    <string name="sort_asc">Ascending</string>
    <string name="sort_desc">Descending</string>
    <string name="sort_name">Name</string>
    <string name="sort_part_of_lesson">Part of Lesson</string>



</resources>
