<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <android.support.v7.preference.PreferenceCategory android:title="Language Settings" />
    <ListPreference
        android:defaultValue="@string/settings_select_language_default"
        android:entries="@array/languages"
        android:entryValues="@array/languages_value"
        android:key="@string/settings_select_language_key"
        android:summary="@string/settings_select_language_summary"
        android:title="@string/settings_select_language_title" />

    <Preference
        android:key="@string/settings_add_language_key"
        android:persistent="false"
        android:summary="@string/settings_add_language_summary"
        android:title="@string/settings_add_language_title" />

    <Preference
        android:key="@string/settings_delete_language_key"
        android:persistent="false"
        android:summary="@string/settings_delete_language_summary"
        android:title="@string/settings_delete_language_title" />

    <android.support.v7.preference.PreferenceCategory android:title="Default Settings" />

    <ListPreference
        android:defaultValue="@string/settings_default_knowledgeLevel_default"
        android:entries="@array/knowledgeLevel"
        android:entryValues="@array/knowledgeLevel_value"
        android:key="@string/settings_default_knowledgeLevel_key"
        android:summary="@string/settings_default_knowledgeLevel_summary"
        android:title="@string/settings_default_knowledgeLevel_title" />
</android.support.v7.preference.PreferenceScreen>