<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/startTraining_dest">

    <fragment
        android:id="@+id/startTraining_dest"
        android:name="com.sliebald.cula.ui.startTraining.StartTrainingFragment"
        android:label="@string/drawer_label_train"
        tools:layout="@layout/fragment_start_training">
        <action
            android:id="@+id/action_startTraining_dest_to_training_dest"
            app:destination="@id/training_dest" />
    </fragment>
    <fragment
        android:id="@+id/library_dest"
        android:name="com.sliebald.cula.ui.library.LibraryFragment"
        android:label="@string/drawer_label_library"
        tools:layout="@layout/fragment_library" />
    <fragment
        android:id="@+id/lessons_dest"
        android:name="com.sliebald.cula.ui.lessons.LessonsFragment"
        android:label="@string/drawer_label_lessons"
        tools:layout="@layout/fragment_lessons">
        <action
            android:id="@+id/action_lessons_dest_to_updateLessonFragment"
            app:destination="@id/updateLessonFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/statistics_dest"
        android:name="com.sliebald.cula.ui.statistics.StatisticsFragment"
        android:label="@string/drawer_label_statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/settings_dest"
        android:name="com.sliebald.cula.ui.settings.SettingsFragment"
        android:label="@string/drawer_label_settings"
        tools:layout="@xml/fragment_settings" />
    <fragment
        android:id="@+id/training_dest"
        android:name="com.sliebald.cula.ui.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training">
        <action
            android:id="@+id/action_training_dest_to_startTraining_dest"
            app:destination="@+id/startTraining_dest"
            app:popUpTo="@id/startTraining_dest" />
        <argument
            android:name="trainingData"
            android:defaultValue="@null"
            app:argType="com.sliebald.cula.data.database.Pojos.TrainingData"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/updateLessonFragment"
        android:name="com.sliebald.cula.ui.updateLesson.UpdateLessonFragment"
        android:label="@string/title_update_lesson_entry"
        tools:layout="@layout/fragment_update_lesson">
        <action
            android:id="@+id/action_updateLessonFragment_to_lessons_dest"
            app:destination="@id/lessons_dest"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_in_right"
            app:popUpTo="@+id/lessons_dest" />
        <argument
            android:name="lessonId"
            app:argType="integer" />
    </fragment>

</navigation>