<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_start_training"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sliebald.cula.ui.startTraining.StartTrainingFragment">

        <TextView
            android:id="@+id/tv_label_start_training_instructions"
            style="@style/LabelHeadline"
            android:text="@string/start_training_label_instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_label_start_training_number_of_words"
            style="@style/LabelStartTraining"
            android:text="@string/start_training_label_number_of_words"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_instructions" />

        <Spinner
            android:id="@+id/sp_start_training_number_of_words"
            style="@style/SpinnerStartTraining"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_number_of_words" />

        <TextView
            android:id="@+id/tv_label_start_training_lesson"
            style="@style/LabelStartTraining"
            android:text="@string/start_training_label_lesson"
            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_number_of_words"
            app:layout_constraintTop_toBottomOf="@+id/sp_start_training_number_of_words" />

        <Spinner
            android:id="@+id/sp_start_training_lesson"
            style="@style/SpinnerStartTraining"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_lesson" />

        <TextView
            android:id="@+id/tv_label_start_training_knowledge_level"
            style="@style/LabelStartTraining"
            android:text="@string/start_training_label_knowledge_level"
            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_lesson"
            app:layout_constraintTop_toBottomOf="@+id/sp_start_training_lesson" />

        <Spinner
            android:id="@+id/sp_start_training_knowledge_level_range"
            style="@style/SpinnerStartTraining"
            app:layout_constraintEnd_toStartOf="@+id/sp_start_training_knowledge_level"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_knowledge_level" />

        <Spinner
            android:id="@+id/sp_start_training_knowledge_level"
            style="@style/SpinnerStartTraining"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_knowledge_level" />

        <TextView
            android:id="@+id/tv_label_start_training_reverse"
            style="@style/LabelStartTraining"
            android:text="@string/start_training_label_reverse_training"
            app:layout_constraintStart_toStartOf="@+id/tv_label_start_training_knowledge_level"
            app:layout_constraintTop_toBottomOf="@+id/sp_start_training_knowledge_level_range" />

        <Switch
            android:id="@+id/sw_start_training_reverse_training"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/distance_medium"
            android:layout_marginTop="@dimen/distance_small"
            android:layout_marginEnd="@dimen/distance_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_reverse" />

        <Button
            android:id="@+id/bt_start_training"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_large"
            android:focusable="true"
            android:text="@string/start_training_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_start_training_reverse" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>