<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.updateLibrary.UpdateLibraryActivity">

        <EditText
            android:id="@+id/edit_text_add_native_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:hint="@string/update_library_hint_native_word"
            android:inputType="text"
            android:nextFocusForward="@id/edit_text_add_foreign_word"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_add_foreign_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/update_library_hint_foreign_word"
            android:inputType="text"
            android:nextFocusForward="@id/edit_text_add_foreign_word"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_add_native_word"
            app:layout_constraintStart_toStartOf="@+id/edit_text_add_native_word"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_add_native_word" />


        <Button
            android:id="@+id/button_add_word_pair"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusable="true"
            android:onClick="commitLibraryEntry"
            android:text="@string/update_library_button_save_word"
            app:layout_constraintEnd_toStartOf="@+id/button_add_word_pair_return"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_add_foreign_word" />

        <Button
            android:id="@+id/button_add_word_pair_return"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:focusable="true"
            android:onClick="commitLibraryEntry"
            android:text="@string/update_library_button_save_word_return"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_add_word_pair"
            app:layout_constraintTop_toTopOf="@+id/button_add_word_pair" />

    </android.support.constraint.ConstraintLayout>
</layout>
