<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_update_lesson"
            tools:context="com.sliebald.cula.ui.updateLibrary.UpdateLibraryActivity">

            <TextView
                android:id="@+id/tv_label_add_lesson_name"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_medium"
                android:layout_marginStart="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_normal"
                android:text="@string/update_lesson_label_name"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_add_lesson_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_xLarge"
                android:layout_marginStart="@dimen/distance_xLarge"
                android:hint="@string/update_lesson_hint_name"
                android:inputType="text"
                android:nextFocusForward="@id/et_add_lesson_description"
                android:paddingEnd="@dimen/distance_medium"
                android:paddingStart="@dimen/distance_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_add_lesson_name" />

            <TextView
                android:id="@+id/tv_label_add_lesson_description"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_medium"
                android:layout_marginStart="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_normal"
                android:text="@string/update_lesson_label_description"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_add_lesson_name" />

            <EditText
                android:id="@+id/et_add_lesson_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/update_lesson_hint_description"
                android:inputType="text"
                android:paddingEnd="@dimen/distance_medium"
                android:paddingStart="@dimen/distance_medium"
                app:layout_constraintEnd_toEndOf="@+id/et_add_lesson_name"
                app:layout_constraintStart_toStartOf="@+id/et_add_lesson_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_add_lesson_description" />

            <Button
                android:id="@+id/button_add_lesson"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/distance_normal"
                android:focusable="true"
                android:onClick="commitLessonEntry"
                android:text="@string/update_library_button_save_word"
                app:layout_constraintEnd_toStartOf="@+id/button_return"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_add_lesson_description" />

            <Button
                android:id="@+id/button_return"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/distance_normal"
                android:layout_marginTop="@dimen/distance_normal"
                android:focusable="true"
                android:onClick="returnWithoutSave"
                android:text="@string/button_return"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/button_add_lesson"
                app:layout_constraintTop_toBottomOf="@+id/et_add_lesson_description" />

            <TextView
                android:id="@+id/tv_label_add_lesson_mappings"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/distance_medium"
                android:layout_marginStart="@dimen/distance_medium"
                android:layout_marginTop="@dimen/distance_medium"
                android:text="@string/update_lesson_label_mapping"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_return" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_lesson_mapping_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_add_lesson_mappings"
                tools:listitem="@layout/lesson_mapping_item" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
